2008-11-28  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: Fix installation of mxflat [Michal Jagermann]

	* lisp/sawfish/wm/state/wm-spec.jl
	* lisp/sawfish/wm/state/transient.jl: Suppert _NET_WM_USER_TIME [Helmut Eller]

	* sawfish/lisp/sawfish/ui/layouts/keymaps.jl
	* sawfish/lisp/sawfish/ui/layout.jl
	* lisp/sawfish/ui/widgets/frame-style.jl: Added ATK-A11Y Support [Shobbit Marthur]

	* configure.in: bump librep req to 0.17, rep-gtk req to 0.18.3 and version to 1.3.5

2008-11-20  Christopher Bratusek <nano-master@gmx.de>
	* lisp/sawfish/wm/autoload.jl: load all keybindings

	* lisp/sawfish/wm/viewport.jl: forgot one hunk of the viewport scroll feature

	* lisp/sawfish/wm/viewport.jl: added viewport boundary

	* lisp/sawfish/wm/ext/error-handler.jl: added error-handler "both"

2008-11-19  Christopher Bratusek <nano-master@gmx.de>
	* man/sawmill.texi: Updated Documentation [Derek Upham]

	* */*: remove ^L [Teika Kazura]

	* MAINTAINERS: updated

	* theme/Crux/theme.jl: Added two new button layouts:
	Complete and Complete-Inverse

2008-11-18  Christopher Bratusek <nano-master@gmx.de>
	* config.sub
	* config.guess: updated both files

	* src/windows.c: another small clean-up

	* lisp/sawfish/wm/windows.jl
	* lisp/sawfish/wm/commands/move-resize.jl: Honour ICCCM Aspect Ratio [Andrea Vetorello]

	* lisp/sawfish/wm/viewport.jl: Added Animated Viewport Scrolling [Fernando Carmona Varo]

2008-11-03  Christopher Bratusek <nano-master@gmx.de>
	* configure.in: minimum pango version is 1.8.0

2008-08-29  Janek Kozicki <cosurgi@gmail.com>
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/stacking.jl
	* lisp/sawfish/wm/util/rects.jl: Add stacking visibility patch by Timo
	Korvola. This fixes raise-lower window problems with xcomposite
	extension.

	* lisp/sawfish/wm/state/maximize.jl: Add maximize fullscreen xinerama
	patch by Jonathan Sambrook (Uploaded by Christopher Bratusek)

2008-08-07  Christopher Bratusek <nano-master@gmx.de>