@@ -150,8 +150,8 @@
 (autoload-command (quote describe-key-to-screen) (quote sawfish.wm.util.keymap))
 (autoload-command (quote quote-event) (quote sawfish.wm.util.keymap))
 (autoload-placement-mode 'top-left 'sawfish.wm.placement.top-left #:for-normal t)
-(autoload-placement-mode 'stagger 'sawfish.wm.placement.stagger)
-(autoload-placement-mode 'off-center 'sawfish.wm.placement.off-center)
+(autoload-placement-mode 'stagger 'sawfish.wm.placement.stagger #:for-normal t)
+(autoload-placement-mode 'off-center 'sawfish.wm.placement.off-center #:for-normal t)
 (autoload-command (quote set-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))) #:class 'default)
 (autoload-command (quote set-window-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))) #:class 'default)
 (autoload-command 'set-viewport-linear:1 'sawfish.wm.commands.viewport-linear #:class 'default)
