@@ -1,3 +1,9 @@
+2008-12-16  Christopher Bratusek <nano-master@gmx.de>
+
+	* lisp/sawfish/wm/placement/stagger.jl
+	* lisp/sawfish/wm/placement/off-center.jl
+	* lisp/sawfish/wm/autoload.jl: Re-expose the Stagger and Off-Center Placement Modes in Sawfish-ui [Andrea Vettorello]
+
 2008-11-28  Christopher Bratusek <nano-master@gmx.de>
 	* themes/Makefile.in: Fix installation of mxflat [Michal Jagermann]
 
